Fixes background offset on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html { font-size: calc(1em + 1vw) }
 }
 
 body {
-  background-color: #EDEDED;
+  background-color: #000;
   color: #fff;
   font-size: .6em;
 }
